@@ -5,6 +5,9 @@
 
 * release 1.10 updated until here **********************************************
 
+2017-04-05 mmichaud <m.michael.michaud@orange.fr>
+  * Improve MakeValidOp robustness
+
 2017-04-01 mmichaud <m.michael.michaud@orange.fr>
   * Fix #458 Improve RasterImageLayerPropertiesPlugIn speed
 
